--- a/index.html
+++ b/index.html
@@ -40,37 +40,89 @@
     </div>
 
     <div class="div2">
+
         <div class="text_product">
             Products
         </div>
+
         <div class="products">
             <div class="product_sora">
-                <video class="sora_video" autoplay loop>
-                    <source src="videos/Products/Sora_is_here.mp4" type="video/mp4">
-                </video>
+                <a href="https://openai.com/index/sora-is-here/">
+                    <video class="sora_video" autoplay loop>
+                        <source src="videos/Products/Sora_is_here.mp4" type="video/mp4">
+                    </video>
+                </a>
+
                 <div class="overlay_sora">
                     <p id="text_sora_title">Sora</p>
                     <p id="text_sora_is_here">Sora is here</p>
                 </div>
             </div>
+            <div class="product_chatgpt">
+                <a href="https://openai.com/index/introducing-chatgpt-pro/">
+                    <img class="img_chatGPT" src="videos/Products/o1_pro_mode_web_card_alt_2 - Copy.jpg" alt="">
+                </a>
+
+                <div class="overlay_chatgpt">
+                    <p id="text_chatGPT_title">ChatGPT</p>
+                    <p id="text_Introducing_chatGPT">Introducing ChatGPT Pro</p>
+                </div>
+            </div>
+            <div class="product_search">
+                <a href="https://openai.com/index/introducing-chatgpt-search/">
+                    <img class="img_search" src="videos/Products/Search_Card - Copy.jpg" alt="">
+                </a>
+                <div class="overlay_search">
+                    <p id="text_search_title">Search</p>
+                    <p id="text_search">Introducing ChatGPT search</p>
+                </div>
+            </div>
+
+        </div>
+    </div>
+
+
+    <!-- 
+    <div class="div3">
+
+        <div class="text_research">
+            Research
+        </div>
+
+        <div class="products">
+
+            <div class="research_sora">
+                <a href="">
+                    <img class="img_research_sora" src="videos/Research/Sora-systems_blog_card_v1.webp" alt="">
+                </a>
+
+                <div class="overlay_research_sora">
+                    <p id="text_research_sora_title">Safety & Alignment</p>
+                    <p id="text_sora_system">Sora System Card</p>
+                </div>
+            </div>
 
             <div class="product_chatgpt">
-                <img class="img_chatGPT" src="videos/Products/o1_pro_mode_web_card_alt_2.webp" alt="">
-                <div class="overlay_sora">
+                <a href="https://openai.com/index/introducing-chatgpt-pro/">
+                    <img class="img_chatGPT" src="videos/Products/o1_pro_mode_web_card_alt_2 - Copy.jpg" alt="">
+                </a>
+
+                <div class="overlay_chatgpt">
                     <p id="text_chatGPT_title">ChatGPT</p>
                     <p id="text_Introducing_chatGPT">Introducing ChatGPT Pro</p>
                 </div>
             </div>
 
             <div class="product_search">
-                <img class="img_chatGPT" src="videos/Products/Search_Card.webp" alt="">
-                <div class="overlay_sora">
-                    <p id="text_chatGPT_title">Search</p>
-                    <p id="text_Introducing_chatGPT">Introducing ChatGPT Pro</p>
+                <img class="img_search" src="videos/Products/Search_Card - Copy.jpg" alt="">
+                <div class="overlay_search">
+                    <p id="text_search_title">Search</p>
+                    <p id="text_search">Introducing ChatGPT search</p>
                 </div>
             </div>
+
         </div>
-    </div>
+    </div> -->
 
 
     <script src="main.js"></script>
