--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
         <div class="products">
             <div class="product_sora">
-                <a href="https://openai.com/index/sora-is-here/">
+                <a class="link_sora" href="https://openai.com/index/sora-is-here/">
                     <video class="sora_video" autoplay loop>
                         <source src="videos/Products/Sora_is_here.mp4" type="video/mp4">
                     </video>
