--- a/index.html
+++ b/index.html
@@ -82,47 +82,95 @@
     </div>
 
 
-    <!-- 
     <div class="div3">
 
         <div class="text_research">
             Research
         </div>
 
-        <div class="products">
+        <div class="researchs">
 
-            <div class="research_sora">
-                <a href="">
-                    <img class="img_research_sora" src="videos/Research/Sora-systems_blog_card_v1.webp" alt="">
+            <div class="research_1">
+                <a href="https://openai.com/index/sora-system-card">
+                    <img class="img_research_1" src="videos/Research/Sora-systems_blog_card_v1.webp" alt="">
                 </a>
 
-                <div class="overlay_research_sora">
-                    <p id="text_research_sora_title">Safety & Alignment</p>
-                    <p id="text_sora_system">Sora System Card</p>
+                <div class="overlay_research_1">
+                    <p id="title_research_1">Safety & Alignment</p>
+                    <p id="text_research_1">Sora System Card</p>
                 </div>
             </div>
 
-            <div class="product_chatgpt">
-                <a href="https://openai.com/index/introducing-chatgpt-pro/">
-                    <img class="img_chatGPT" src="videos/Products/o1_pro_mode_web_card_alt_2 - Copy.jpg" alt="">
+            <div class="research_2">
+                <a href="https://openai.com/index/openai-o1-system-card/">
+                    <img class="img_research_2" src="videos/Research/o1-systems_blog_card_v2__1_.webp" alt="">
                 </a>
 
                 <div class="overlay_chatgpt">
-                    <p id="text_chatGPT_title">ChatGPT</p>
-                    <p id="text_Introducing_chatGPT">Introducing ChatGPT Pro</p>
+                    <p id="title_research_2">Research . Dec 5, 2024</p>
+                    <p id="text_research_2">o1 System Card</p>
                 </div>
             </div>
 
-            <div class="product_search">
-                <img class="img_search" src="videos/Products/Search_Card - Copy.jpg" alt="">
+            <div class="research_3">
+                <a href="https://openai.com/index/learning-to-reason-with-llms/">
+                    <img class="img_research_3" src="videos/Research/o1-research-blogcard.webp" alt="">
+                </a>
                 <div class="overlay_search">
-                    <p id="text_search_title">Search</p>
-                    <p id="text_search">Introducing ChatGPT search</p>
+                    <p id="title_research_3">Research . Sep 12, 2024</p>
+                    <p id="text_research_3">Learning to<br>Reason with LLMs</p>
                 </div>
             </div>
 
         </div>
-    </div> -->
+    </div>
+
+
+    <div class="div4">
+
+        <div class="text_business">
+            For Business
+        </div>
+
+        <div class="business">
+
+            <div class="business_1">
+                <a href="https://openai.com/index/sora-system-card">
+                    <img class="img_business_1" src="videos/Business/1.webp" alt="">
+                </a>
+
+                <div class="overlay_business_1">
+                    <p id="title_business_1">OpenAI for Business</p>
+                    <p id="text_business_1">Explore AI solutions for<br>
+                        companies of all sizes</p>
+                </div>
+            </div>
+
+            <div class="business_2">
+                <a href="https://openai.com/index/openai-o1-system-card/">
+                    <img class="img_business_2" src="videos/Business/2.webp" alt="">
+                </a>
+
+                <div class="overlay_business_2">
+                    <p id="title_business_2">ChatGPT Enterprise</p>
+                    <p id="text_business_2">Empower your entire<br>
+                        workforce with<br>Enterprise-grade AI</p>
+                </div>
+            </div>
+
+            <div class="business_3">
+                <a href="https://openai.com/index/learning-to-reason-with-llms/">
+                    <img class="img_business_3" src="videos/Business/3.webp" alt="">
+                </a>
+                <div class="overlay_business_3">
+                    <p id="title_business_3">ChatGPT Team</p>
+                    <p id="text_business_3">A superassistant<br>
+                        for every member<br>of your team</p>
+                </div>
+            </div>
+
+        </div>
+    </div>
 
 
     <script src="main.js"></script>
