--- a/index.html
+++ b/index.html
@@ -173,6 +173,196 @@
     </div>
 
 
+    <div class="div5">
+
+        <div class="text_developers">
+            For Developers
+        </div>
+
+        <div class="developers">
+
+            <div class="developers_1">
+                <a href="https://openai.com/index/sora-system-card">
+                    <img class="img_developers_1" src="videos/Developers/01_Realtime_API.webp" alt="">
+                </a>
+
+                <div class="overlay_developers_1">
+                    <p id="title_developers_1">Product . Oct 1, 2024</p>
+                    <p id="text_developers_1">Introducing the<br>
+                        Realtime API</p>
+                </div>
+            </div>
+
+            <div class="developers_2">
+                <a href="https://openai.com/index/openai-o1-system-card/">
+                    <img class="img_developers_2" src="videos/Developers/02_Vision_Fine-tuning.webp" alt="">
+                </a>
+
+                <div class="overlay_developers_2">
+                    <p id="title_developers_2">Product . Oct 1, 2024</p>
+                    <p id="text_developers_2">Introducing vision to<br>
+                        the fine-tuning API</p>
+                </div>
+            </div>
+
+            <div class="developers_3">
+                <a href="https://openai.com/index/learning-to-reason-with-llms/">
+                    <img class="img_developers_3" src="videos/Developers/03_Prompt_Caching.webp" alt="">
+                </a>
+                <div class="overlay_developers_3">
+                    <p id="title_developers_3">Product . Oct 1, 2024</p>
+                    <p id="text_developers_3">Prompt Caching<br>
+                        in the API</p>
+                </div>
+            </div>
+
+        </div>
+    </div>
+
+
+    <div class="div6">
+
+        <div class="text_stories">
+            Stories
+        </div>
+
+        <div class="stories">
+
+            <div class="stories_1">
+                <a href="https://openai.com/index/sora-system-card">
+                    <img class="img_stories_1" src="videos/Stories/1.webp" alt="">
+                </a>
+
+                <div class="overlay_stories_1">
+                    <p id="title_stories_1">Story</p>
+                    <p id="text_stories_1">Delivering high-<br>
+                        performance<br>customer support</p>
+                </div>
+            </div>
+
+            <div class="stories_2">
+                <a href="https://openai.com/index/openai-o1-system-card/">
+                    <img class="img_stories_2" src="videos/Stories/2.webp" alt="">
+                </a>
+
+                <div class="overlay_stories_2">
+                    <p id="title_stories_2">Story</p>
+                    <p id="text_stories_2">Building agent+<br>
+                        human collaboration<br>with GPT-4o</p>
+                </div>
+            </div>
+
+            <div class="stories_3">
+                <a href="https://openai.com/index/learning-to-reason-with-llms/">
+                    <img class="img_stories_3" src="videos/Stories/3.webp" alt="">
+                </a>
+                <div class="overlay_stories_3">
+                    <p id="title_stories_3">Story</p>
+                    <p id="text_stories_3">Minnesota's Enterprise<br>
+                        Translation Office<br>uses ChatGPT to<br>
+                        bridge language gaps</p>
+                </div>
+            </div>
+
+        </div>
+    </div>
+
+
+    <div class="div2">
+
+        <div class="text_product">
+            News
+        </div>
+
+        <div class="products">
+            <div class="product_sora">
+                <a class="link_sora" href="https://openai.com/index/sora-is-here/">
+                    <video class="sora_video" autoplay loop>
+                        <source src="videos/Products/Sora_is_here.mp4" type="video/mp4">
+                    </video>
+                </a>
+
+                <div class="overlay_sora">
+                    <p id="text_sora_title">Sora</p>
+                    <p id="text_sora_is_here">Sora is here</p>
+                </div>
+            </div>
+            <div class="product_chatgpt">
+                <a href="https://openai.com/index/introducing-chatgpt-pro/">
+                    <img class="img_chatGPT" src="videos/Products/Search_Card - Copy.jpg" alt="">
+                </a>
+
+                <div class="overlay_chatgpt">
+                    <p id="text_chatGPT_title">Product</p>
+                    <p id="text_Introducing_chatGPT">Introducing ChatGPT Pro</p>
+                </div>
+            </div>
+            <div class="product_search">
+                <a href="https://openai.com/index/introducing-chatgpt-search/">
+                    <img class="img_search" src="videos/Products/Canvas_Card - Copy.jpg" alt="">
+                </a>
+                <div class="overlay_search">
+                    <p id="text_search_title">Product</p>
+                    <p id="text_search">Introducing canvas, a
+                        <br>new way to write and code with ChatGPT.
+                    </p>
+                </div>
+            </div>
+
+        </div>
+    </div>
+
+    <div class="div8">
+        <p class="div8_text">Instant answers. Greater<br>
+            productivity. Endless inspiration.</p>
+        <button class="btn_try_chatgpt">Try ChatGPT</button>
+    </div>
+
+    <div class="div9">
+        <div class="col1">
+            <table>
+                <li>Our research</li>
+                <li>Overview</li>
+                <li>Index</li>
+                <li></li>
+                <li>Latest advancements</li>
+                <li>OpenAI o1</li>
+                <li>OpenAI o1-mini</li>
+                <li>GPT-4</li>
+                <li>GPT-4o mini</li>
+                <li>DALL.E3</li>
+                <li>Sora</li>
+            </table>
+        </div>
+        <div class="col2">
+            <table>
+                <li>ChatGPT</li>
+                <li>For Everyone</li>
+                <li>For Teams</li>
+                <li>For Enterprises</li>
+                <li>ChatGPT login</li>
+                <li>Download</li>
+                <li>OpenAI o1-mini</li>
+                <li></li>
+                <li>API</li>
+                <li>Platform overview</li>
+                <li>Pricing</li>
+                <li>Documentation</li>
+                <li>API login</li>
+            </table>
+        </div>
+        <div class="col3">
+            k
+        </div>
+        <div class="col4">
+            j
+        </div>
+        <div class="col5">
+            k
+        </div>
+    </div>
+
+
     <script src="main.js"></script>
 </body>
 
