--- a/index.html
+++ b/index.html
@@ -321,11 +321,11 @@
     <div class="div9">
         <div class="col1">
             <table>
-                <li>Our research</li>
+                <li class="special_li">Our research</li>
                 <li>Overview</li>
                 <li>Index</li>
                 <li></li>
-                <li>Latest advancements</li>
+                <li class="special_li">Latest advancements</li>
                 <li>OpenAI o1</li>
                 <li>OpenAI o1-mini</li>
                 <li>GPT-4</li>
@@ -336,7 +336,7 @@
         </div>
         <div class="col2">
             <table>
-                <li>ChatGPT</li>
+                <li class="special_li">ChatGPT</li>
                 <li>For Everyone</li>
                 <li>For Teams</li>
                 <li>For Enterprises</li>
@@ -344,24 +344,64 @@
                 <li>Download</li>
                 <li>OpenAI o1-mini</li>
                 <li></li>
-                <li>API</li>
+                <li class="special_li">API</li>
                 <li>Platform overview</li>
                 <li>Pricing</li>
                 <li>Documentation</li>
                 <li>API login</li>
+                <li></li>
+                <li class="special_li">Explore more</li>
+                <li>OpenAI for business</li>
+                <li>Stories</li>
             </table>
         </div>
         <div class="col3">
-            k
+            <table>
+                <li class="special_li">Safety overview</li>
+                <li>Safety overview</li>
+            </table>
         </div>
         <div class="col4">
-            j
+            <table>
+                <li class="special_li">Company</li>
+                <li>About us</li>
+                <li>News</li>
+                <li>Our Charter</li>
+                <li>Security</li>
+                <li>Residency</li>
+                <li>Careers</li>
+            </table>
         </div>
         <div class="col5">
-            k
+            <table>
+                <li class="special_li">Terms & policies</li>
+                <li>Terms of use</li>
+                <li>Privacy policy</li>
+                <li>Brand guidelines</li>
+                <li>Other policies</li>
+            </table>
         </div>
     </div>
 
+    <footer>
+        <div class="footer1">
+            <p>OpenAI © 2015–2024</p>
+        </div>
+        <div class="footer2">
+            <p>Manage Cookies</p>
+        </div>
+        <div class="footer3">
+
+            <img class="logos" id="logo1" src="images/logos/twitter (1).png" alt="">
+            <img class="logos" id="logo2" src="images/logos/youtube.png" alt="">
+            <img class="logos" id="logo3" src="images/logos/linkedin-logo.png" alt="">
+            <img class="logos" id="logo4" src="images/logos/github.png" alt="">
+            <img class="logos" id="logo5" src="images/logos/instagram.png" alt="">
+            <img class="logos" id="logo6" src="images/logos/tik-tok.png" alt="">
+            <img class="logos" id="logo7" src="images/logos/discord.png" alt="">
+
+        </div>
+    </footer>
 
     <script src="main.js"></script>
 </body>
